# fastapi_usecase

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth_route.py  health_route.py  order_route.py  user_route.py
app/core/: config.py  dependencies.py  rate_limiter.py  security.py
app/db/: base.py  mongodb.py
app/models/: auth_model.py  order_model.py  user_model.py
app/services/: auth_service.py  order_service.py  user_service.py
